# video_processor

./: .gitignore  .gitmodules  CMakeLists.txt
Assets/Shaders/: full_screen_quad_solid_color.fs  full_screen_quad_textured.fs  full_screen_quad_textured_with_filter.fs  processor_0.fs  processor_1.fs  processor_1a.fs  processor_1b.fs  processor_1b.vs  processor_1c.fs  vhs_filter.fs  vhs_filter.vs
Assets/Shaders/processor/: full_screen_postprocess.fs  full_screen_vertical_scale.vs  processor_1b.vs  processor_1c.fs  processor_1c.vs
Assets/config/: config.txt
Assets/fonts/: font_48x80.txt
Assets/sprites/: decals_64x128.txt
ProVid/: CMakeLists.txt  Main.cpp  main.cpp
ProVid/Apps/: Processor.cpp  Processor.h  ShaderLab.cpp
ProVid/File/: File.cpp  File.h
ProVid/Video/: VideoReader.cpp  VideoReader.h  VideoWriter.cpp  VideoWriter.h
apps/: CMakeLists.txt
apps/playground/: CMakeLists.txt  main.cpp  playground.cpp  playground.h
apps/processor/: CMakeLists.txt  config.h  config.txt  main.cpp  processor.cpp  processor.h
apps/shader_lab/: CMakeLists.txt  main.cpp  shader_lab.cpp  shader_lab.h
pro_vid/: CMakeLists.txt
pro_vid/apps/: shader_lab.h
pro_vid/filesystem/: binary_file.cpp  binary_file.h
pro_vid/video/: video_reader.cpp  video_reader.h  video_writer.h
resources/shaders/: full_screen_quad.vs  full_screen_quad_textured_with_filter.fs  off_screen_quad_textured.fs  vhs_filter.fs  vhs_filter.vs
resources/shaders/processor/: full_screen_channels_separation.fs  full_screen_postprocess.fs  sprites.vs
resources/sprites/: font_48x80.txt
vid_lib/: CMakeLists.txt
vid_lib/vid_lib/filesystem/: binary_file.cpp  binary_file.h
vid_lib/vid_lib/math/: aspect_ratio.cpp  aspect_ratio.h  film.cpp  film.h  random.cpp  random.h
vid_lib/vid_lib/opengl/: opengl.cpp  opengl.h
vid_lib/vid_lib/opengl/buffer/: buffer.cpp  buffer.h  sprite_buffer_array.cpp  sprite_buffer_array.h
vid_lib/vid_lib/opengl/debug/: debug_messenger.cpp  debug_messenger.h
vid_lib/vid_lib/opengl/shader/: program.cpp  program.h  shader.cpp  shader.h  shader_utils.cpp  shader_utils.h
vid_lib/vid_lib/opengl/texture/: framebuffer.cpp  framebuffer.h  texture.cpp  texture.h
vid_lib/vid_lib/sprite/: atlas.cpp  atlas.h  geometry_generator.cpp  geometry_generator.h  raster_text.cpp  raster_text.h  sprite.h  sprite_batch.cpp  sprite_batch.h  text.cpp  text.h
vid_lib/vid_lib/video/: async_video_reader.cpp  async_video_reader.h  async_video_writer.cpp  async_video_writer.h  video_reader.cpp  video_reader.h  video_writer.cpp  video_writer.h
